--- a/src/app/social/social.component.scss
+++ b/src/app/social/social.component.scss
@@ -10,8 +10,17 @@
     height: 16.11%;
 }
 
+@media screen and (max-width: 576px) {
+  .social {
+    position: fixed;
+    top: 80%;  
+    display: flex;
+    flex-direction: column;
+  } 
+}
+
 svg {
-  width: 3em;
+  width: 3rem;
   height: auto;
   margin: 0 0.5em;
   fill: $grey;
